force-app/main/default/objects/Apttus_Config2__ProductClassification__c/Apttus_Config2__ProductClassification__c.object-meta.xml
<CustomObject>
    <description>Represents a product classification which is a member of the list of products associated with a classification.</description>
    <label>Product Classification</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Classification Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>