force-app/main/default/objects/Apttus_Config2__ProductClassification__c/fields/Apttus_Config2__ClassificationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ClassificationId__c</fullName>
    <description>ID of the associated category</description>
    <label>Category</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>