force-app/main/default/objects/Apttus_Config2__ProductClassification__c/fields/Apttus_Config2__DefaultQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultQuantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The default quantity that should be presented to the user for selection. This is applicable only to options or components.</description>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>