force-app/main/default/objects/Apttus_Config2__ProductClassification__c/fields/Apttus_Config2__MinQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MinQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The minimum quantity of the option that must be selected. The quantity can be zero. This is applicable only to options or components.</description>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>