force-app/main/default/objects/Apttus_Config2__ProductClassification__c/fields/Apttus_Config2__Modifiable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Modifiable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the option or component is modifiable during selection. This is applicable only to options or components.</description>
    <label>Modifiable</label>
    <type>Checkbox</type>
</CustomField>