force-app/main/default/objects/Apttus_Config2__ProductClassification__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <description>The sequence which the product should appear in the category.</description>
    <inlineHelpText>The sequence which the product should appear in the category.</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>